--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   </head>
   <body>
 
+    <nav class="navbar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+
+    </nav>
 
 
 
@@ -39,7 +49,8 @@
 
 
 
-    
+
+
   
 
     <!-- Optional JavaScript; choose one of the two! -->
