home section html done

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
 <!-- home section of our website -->
 
 
+<section id="home">
+    <div class="container">
+
+        <h1 class="heading">I AM <br>SHIVAM SINGH</h1>
+        <button class="btn">Main Portfolio</button>
+
+    </div>
+
+</section>
+
+
 
 
 
