home section done

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 
 
 <section id="home">
+
     <div class="container">
 
         <h1 class="heading">I AM <br>SHIVAM SINGH</h1>
-        <button class="btn">Main Portfolio</button>
+      
+        <button   type="button" class="btn btn-primary">Main Portfolio</button>
 
     </div>
 
@@ -40,9 +42,7 @@
 
 
 
-
-
-
+<!-- about section -->
 
 
 
